Fixed bug where title and right arrow not aligning with carousel at max width

--- a/client/src/styles/carousel.css
+++ b/client/src/styles/carousel.css
@@ -7,10 +7,34 @@
 .wrapper {
     width: 100%;
     overflow: hidden;
-    max-width: 1366px;
-    min-width: 960px;
+    max-width: 1140px;
+    min-width: 950px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
 }
 
+.headingWrapper {
+    text-align: center;
+    /* margin-left: 4.166667%;
+    width: 91.66667%;
+    padding: 0 15px; */
+    float: left;
+    /* max-width: 1166px; */
+}
+
+.heading {
+    box-sizing: border-box;
+    font-size: 12px;
+    font-family: "abibas-bold", Helvetica,Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-size: normal;
+    font-weight: 600;
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 36px;
+    line-height: 32px;
+    margin-left: auto;
+    margin-right: auto;
+}
