--- a/client/src/styles/item.css
+++ b/client/src/styles/item.css
@@ -33,6 +33,7 @@
 .product:hover {
     box-sizing: border-box;
     border: 1px solid black;
+    z-index: 10;
 }
 
 .picture {
